--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,8 @@
 <header class="site-header" role="banner">
   <div class="wrapper nav-wrapper">
     <a class="brand" rel="author" href="{{ "/" | relative_url }}">
-      <span class="site-title">&nbsp;&nbsp;</span>
       <img src="{{ '/assets/images/localmip.png' | relative_url }}" alt="Local-MIP logo" class="brand-logo" />
-      <span class="site-title">&nbsp;&nbsp;{{ site.title | escape }}</span>
+      <span class="site-title">{{ site.title | escape }}</span>
     </a>
 
     <input type="checkbox" id="nav-toggle" class="nav-toggle" />
